# Valgrind_Exercise

./: CMakeLists.txt  readme.md
app/: AnalogSensor.cpp  CMakeLists.txt  main.cpp
include/: AnalogSensor.hpp  Sensor.hpp  reader.hpp
include/mock/: mock_class_and_functions.hpp
results/: cpplint_cppcheck.txt
results/after_bugFix/: callgrind.out.21766  valgrind_result.txt
results/before_bugfix/: callgrind.out.13700  valgrind_result.txt
src/: AnalogSensor.cpp  CMakeLists.txt  reader.cpp
test/: CMakeLists.txt  test.cpp  test_mock.cpp
